--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -40,7 +40,7 @@
             <li role="presentation"><a href="index.html">Lecturas</a></li>
             <li role="presentation"><a href="#">Multimedia</a></li>
             <li role="presentation"><a href="#">Actividades</a></li>
-            <li role="presentation"><a href="#">Autores</a></li>
+            <li role="presentation"><a href="AUTORES.HTML">Autores</a></li>
           </ul>
         </div>
       </div>
