--- a/Autores.html
+++ b/Autores.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -36,7 +36,7 @@
       <div class="navbar-collapse collapse">
         <div class="menu">
           <ul class="nav nav-tabs" role="tablist">            
-            <li role="presentation" class="active"><a href="#">Inicio</a></li>
+            <li role="presentation" class="active"><a href="index.html">Inicio</a></li>
             <li role="presentation"><a href="Lecturas.html">Lecturas</a></li>
             <li role="presentation"><a href="Multimedia.html">Multimedia</a></li>
             <li role="presentation"><a href="Actividades.html">Actividades</a></li>           
