--- a/Multimedia.html
+++ b/Multimedia.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -38,9 +38,9 @@
           <ul class="nav nav-tabs" role="tablist">            
             <li role="presentation" class="active"><a href="#">Inicio</a></li>
             <li role="presentation"><a href="index.html">Lecturas</a></li>
-            <li role="presentation"><a href="#">Multimedia</a></li>
-            <li role="presentation"><a href="#">Actividades</a></li>
-            <li role="presentation"><a href="#">Autores</a></li>
+            <li role="presentation"><a href="index.html">Multimedia</a></li>
+            <li role="presentation"><a href="index.html">Actividades</a></li>
+            <li role="presentation"><a href="Autores.html">Autores</a></li>
           </ul>
         </div>
       </div>
