--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <li class="dropdown">
 					<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actividades<span class="caret"></span></a>
 					<ul class="dropdown-menu">
-						<li><a>Actividad 1</a></li>
-						<li><a>Actividad 2</a></li>
-						<li><a>Actividad 3</a></li>
+						<li><a>Actividad 1.</a></li>
+						<li><a>Actividad 2.</a></li>
+						<li><a>Actividad 3.</a></li>
 					</ul>
 			</li>
             <li role="presentation"><a href="#">Autores</a></li>
