--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
           <ul class="nav nav-tabs" role="tablist">            
             <li role="presentation" class="active"><a href="#">Inicio</a></li>
             <li role="presentation"><a href="index.html">Lecturas</a></li>
-            <li role="presentation"><a href="multimedia.html">Multimedia</a></li>
-            <li role="presentation"><a href="actividades.html">Actividades</a></li>
-            <li role="presentation"><a href="autores.html">Autores</a></li>
+            <li role="presentation"><a href="Multimedia.html">Multimedia</a></li>
+            <li role="presentation"><a href="Actividades.html">Actividades</a></li>
+            <li role="presentation"><a href="Autores.html">Autores</a></li>
           </ul>
         </div>
       </div>
