--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" type="text/css" href="css/set1.css" />
   <link href="css/overwrite.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-
+  <link rel="stylesheet" type="text/css" href="css/actividades.css">
 </head>
 
 <body>
@@ -31,15 +31,21 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-        <a class="navbar-brand" href="index.html"><span>Logo</span></a>
+        <a class="navbar-brand" href="index.html"><img src="img/logo1.png" style="width:50px;height:20px alt="INDEX" border="0"></a>
       </div>
       <div class="navbar-collapse collapse">
         <div class="menu">
           <ul class="nav nav-tabs" role="tablist">            
-            <li role="presentation" class="active"><a href="#">Inicio</a></li>
+            <li role="presentation" class="active"><a href="index.html">Inicio</a></li>
             <li role="presentation"><a href="index.html">Lecturas</a></li>
             <li role="presentation"><a href="Multimedia.html">Multimedia</a></li>
-            <li role="presentation"><a href="Actividades.html">Actividades</a></li>
+            <li role="presentation" class="activities"><a href="Actividades.html">Actividades</a>
+              <ul class="submenu">
+                <li><a href="#actividad1">Actividad 1</a></li>
+                <li><a href="#actividad2">Actividad 2</a></li>
+                <li><a href="#actividad3">Actividad 3</a></li>
+              </ul>
+            </li>
             <li role="presentation"><a href="Autores.html">Autores</a></li>
           </ul>
         </div>
