--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <li class="dropdown">
 					<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actividades<span class="caret"></span></a>
 					<ul class="dropdown-menu">
-						<li><a>Actividad 1.</a></li>
-						<li><a>Actividad 2.</a></li>
-						<li><a>Actividad 3.</a></li>
+						<li><a>Actividad 1</a></li>
+						<li><a>Actividad 2</a></li>
+						<li><a>Actividad 3</a></li>
 					</ul>
 			</li>
             <li role="presentation"><a href="#">Autores</a></li>
@@ -77,7 +77,7 @@
       <div class="box">
         <div class="col-md-4">
           <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="0.4s">
-            <h4>Información 1</h4>
+            <h4>Información</h4>
             <div class="icon">
               <i class="fa fa-location-arrow fa-3x"></i>
             </div>
@@ -89,7 +89,7 @@
         </div>
         <div class="col-md-4">
           <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="1.0s">
-            <h4>Información 2</h4>
+            <h4>Información</h4>
             <div class="icon">
               <i class="fa fa-desktop fa-3x"></i>
             </div>
@@ -101,7 +101,7 @@
         </div>
         <div class="col-md-4">
           <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="1.6s">
-            <h4>Información 3</h4>
+            <h4>Información</h4>
             <div class="icon">
               <i class="fa fa-location-arrow fa-3x"></i>
             </div>
