--- a/Actividades.html
+++ b/Actividades.html
@@ -1,81 +1,88 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<head>
-	  <meta charset="utf-8">
-	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <title>Actividades</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>ACTIVIDADES</title>
 
-	  <!-- Bootstrap -->
-	  <link href="css/bootstrap.min.css" rel="stylesheet">
-	  <link rel="stylesheet" href="css/animate.css">
-	  <link rel="stylesheet" href="css/font-awesome.min.css">
-	  <link rel="stylesheet" href="css/jquery.bxslider.css">
-	  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-	  <link rel="stylesheet" type="text/css" href="css/demo.css" />
-	  <link rel="stylesheet" type="text/css" href="css/set1.css" />
-	  <link href="css/overwrite.css" rel="stylesheet">
-	  <link href="css/style.css" rel="stylesheet">
-	  <link rel="stylesheet" type="text/css" href="css/actividades.css">
-	</head>
+  <!-- Bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/jquery.bxslider.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+  <link rel="stylesheet" type="text/css" href="css/demo.css" />
+  <link rel="stylesheet" type="text/css" href="css/set1.css" />
+  <link href="css/overwrite.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/actividades.css">
+</head>
+
 <body>
-	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-	    <div class="container">
-	      <!-- Brand and toggle get grouped for better mobile display -->
-	      <div class="navbar-header">
-	        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse.collapse">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-	        <a class="navbar-brand" href="index.html"><img src="img/logo1.png" style="width:50px;height:20px alt="INDEX" border="0"></a>
-	      </div>
-	      <div class="navbar-collapse collapse">
-	        <div class="menu">
-	          <ul class="nav nav-tabs" role="tablist">            
-	            <li role="presentation"><a href="index.html">Inicio</a></li>
-	            <li role="presentation"><a href="Lecturas.html">Lecturas</a></li>
-	            <li role="presentation"><a href="Multimedia.html">Multimedia</a></li>
-	            <li role="presentation" class="active activities"><a href="Actividades.html">Actividades</a>
-	            	<ul class="submenu">
-	            		<li><a href="#actividad1">Actividad 1</a></li>
-	            		<li><a href="#actividad2">Actividad 2</a></li>
-	            		<li><a href="#actividad3">Actividad 3</a></li>
-	            	</ul>
-	            </li>
-	            <li role="presentation"><a href="Autores.html">Autores</a></li>           
-	          </ul>
-	        </div>
-	      </div>
-	    </div>
-  	</nav>
-  	<div style="margin-top: 80px;">
-	  	<header style="text-align: center;"><img src="img/actividades.png" width="550"></header><br>
-	  	<section class="a">
-	  		<header><h3>Actividad 1</h3></header>
-	  		<article>
-	  			<img src="img/a1.jpg" alt="actividad_1" class="a-img">
-	  			<p>Descripción...</p>	
-	  		</article>
-	  	</section>
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse.collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+        <a class="navbar-brand" href="index.html"><img src="img/logo1.png" style="width:50px;height:20px alt="INDEX" border="0"></a>
+      </div>
+     <div class="navbar-collapse collapse">
+        <div class="menu">
+          <ul class="nav nav-tabs" role="tablist">            
+            <li role="presentation"><a href="index.html">Inicio</a></li>
+            <li role="presentation"><a href="Lecturas.html">Lecturas</a></li>            
+            <li role="presentation" class="activities"><a href="Multimedia.html">Multimedia</a>
+              <ul class="submenu">
+                <li><a href="Multimedia1.html">Multimedia 1</a></li>
+                <li><a href="Multimedia2.html">Multimedia 2</a></li>               
+              </ul>
+            </li>
+            <li role="presentation" class="activities"><a href="Actividades.html">Actividades</a>
+              <ul class="submenu">
+                <li><a href="Actividad1.html">Actividad 1</a></li>
+                <li><a href="Actividad2.html">Actividad 2</a></li>
+                <li><a href="Actividad3.html">Actividad 3</a></li>
+              </ul>
+            </li>
+    <li role="presentation"><a href="Autores.html">Autores</a></li>           
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div style="margin-top: 80px;">
+      <header style="text-align: center;"><img src="img/actividades.png" width="550"></header><br>
+      <section class="a">
+        <header><h3>Actividad 1</h3></header>
+        <article>
+          <img src="img/a1.jpg" alt="actividad_1" class="a-img">
+          <p>Descripción...</p> 
+        </article>
+      </section>
 
-	  	<section class="a">
-	  		<header><h3>Actividad 2</h3></header>
-	  		<article>
-	  			<img src="img/a1.jpg" alt="actividad_2" class="a-img">
-	  			<p>Descripción...</p>	
-	  		</article>
-	  	</section>
+      <section class="a">
+        <header><h3>Actividad 2</h3></header>
+        <article>
+          <img src="img/a1.jpg" alt="actividad_2" class="a-img">
+          <p>Descripción...</p> 
+        </article>
+      </section>
 
-	  	<section class="a">
-	  		<header><h3>Actividad 3</h3></header>
-	  		<article>
-	  			<img src="img/a1.jpg" alt="actividad_3" class="a-img">
-	  			<p>Descripción...</p>	
-	  		</article>
-	  	</section>
-	</div>
+      <section class="a">
+        <header><h3>Actividad 3</h3></header>
+        <article>
+          <img src="img/a1.jpg" alt="actividad_3" class="a-img">
+          <p>Descripción...</p> 
+        </article>
+      </section>
+  </div>
+  
 </body>
 </html>
