--- a/Lecturas.html
+++ b/Lecturas.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MULTIMEDIA</title>
+  <title>LECTURAS</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -57,24 +57,62 @@
       </div>
     </div>
   </nav>
-<div class="container">
-    <div class="row">     
-      <div id="pane" >
-        <br> <br/>         
-          <br> <br/>
-          <img class="center-block" src="img/multimedia.jpg">
-          <center>
-          <table class="center" style="width:60%">           
-            <td><a title="Doocumentación" href="Multimedia1.html"><img src="img/documentacion.jpg" alt="Documentación" /></a></td>   
-            <td><a title="Pruebas" href="Multimedia2.html"><img src="img/pruebas.jpg" alt="pruebas" /></a></td> 
-           </table> 
-            </center>
+<br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="body">
+    <div class="subtitle">
+      <h2 align="center"><b>Documentacion De Pruebas De Software</b></h2>
+    </div>
+    <br>
+    <br>
+    <section>
+      <p align="left">Siendo los softwares una herramienta que se utilizan en prácticamente en todo el mundo y funciona con todos los dispositivos se debe de garantizar el buen funcionamiento de este y que sea un software de calidad para el buen consumo.</p> 
+      <div class="img">
+        <img align="center" src="img/Prueba_de_software.jpg" height="200px">
       </div>
-              
-    </div>  
-  </div>
- </div> 
+      <br>
+      <div>
+        <p> wordpress. (07 de 08 de 2010). Obtenido de https://dy05.wordpress.com/</p>
+        </div>
+        <br>
+      <p align="left">Durante este proceso los desarrolladores suelen olvidar de un paso muy importante que es la documentación, ¿esto para qué? Por los siguientes motivos.</p> 
+      <p align="left">Para un mantenimiento efectivo por parte de sus desarrolladores o personal ajeno a este.</p> 
+      <p align="left"> para que el usuario tenga un buen manejo y saque provecho de este, hay muchos usuarios que no entiende en su totalidad un software y mucho menos lo manejan, pero es por falta de información.</p> 
+      <p align="left">Para verificar antes de instalar los requisitos del software y así evitar un mal funcionamiento del equipo o del software.</p>
+      <br>
+      <br>
 
+    </section>  
+
+
+  <div class="subtitle">  
+    <h2 align="center"><b>Tecnicas De Pruebas De Software</b></h2>
+  </div>
+    <br>
+    <br>
+      <section>
+        <p align="left">Existen varias técnicas de software, pero unas de las más comunes que se realizan son las técnicas de caja blanca (white box testing) y la técnica de caja negra (black box testing).</p>
+        <p align="left"><b>La técnica de caja blanca:</b> son las que realiza los desarrolladores con el fin de validar el código paso a paso con esto aseguramos una muy buena calidad en el software.</p>
+        <div class="img">
+          <img aling="center" src="img/cajablanca.jpg" height="200px">
+        </div>
+        <div>
+          <p>Jose Alfonso . (11 de 08 de 2013). blogspot. Obtenido de http://taller1cdsucn.blogspot.com/2013/08/tecnicas-de-caja-negra.html</p>
+          <br>
+        </div>
+        <p align="left"><b>Técnicas de caja negra:</b>  las realiza los equipos de testing validando todas las entradas y salidas del software sin tener en cuenta el funcionamiento interno, esto nos asegura que los datos de entrada correspondan a los datos de salida.</p>
+        <div class="img">
+          <img align="center" src="img/CajaNegra.jpg" height="200px">
+        </div>
+        <div>
+          <p>Guevara , O. (15 de 05 de 2011). blogspo. Obtenido de http://nightcrowl.blogspot.com/2011/05/pruebas-unitarias.html</p>
+          <br>
+        </div>
+      </section>
+  </div>      
 <!--pie de página-->
   <footer>
     <div class="last-div">
