--- a/Multimedia1.html
+++ b/Multimedia1.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MULTIMEDIA</title>
+  <title>DOCUMENTACI[ON EN PROYECTOS DE SOFTWARE</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -59,18 +59,19 @@
   </nav>
 <div class="container">
     <div class="row">     
-      <div id="pane" >
-        <br> <br/>         
-          <br> <br/>
-          <img class="center-block" src="img/multimedia.jpg">
-          <center>
-          <table class="center" style="width:60%">           
-            <td><a title="Doocumentación" href="Multimedia1.html"><img src="img/documentacion.jpg" alt="Documentación" /></a></td>   
-            <td><a title="Pruebas" href="Multimedia2.html"><img src="img/pruebas.jpg" alt="pruebas" /></a></td> 
-           </table> 
-            </center>
-      </div>
-              
+      <div id="pane" >      
+          <img class="center-block" src="img/documentacion.jpg">
+        <CENTER>
+        <br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/pII2WpxJQg4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <br>Alcenit Corporation [Alcenit Corporation]. (2015, Mayo 14). Pruebas de Software (Testing de Software)  [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=pII2WpxJQg4
+        <br><br><br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qkeD94Kj_UQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <br>DesarrolloWeb.com [DesarrolloWeb.com]. (2017, Mayo 25). Desarrollo de pruebas del software [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=qkeD94Kj_UQ
+        <br><br><br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Gh1x1kMQ5K4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <br>Palma, A. [Andy Castillo Palma]. (2017, Agosto 17). Documentación XP - Plan de pruebas [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=Gh1x1kMQ5K4
+        </CENTER>
     </div>  
   </div>
  </div> 
