--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -18,7 +18,6 @@
   <link href="css/overwrite.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/actividades.css">
-
 </head>
 
 <body>
@@ -34,11 +33,25 @@
 				</button>
         <a class="navbar-brand" href="index.html"><img src="img/logo1.png" style="width:50px;height:20px alt="INDEX" border="0"></a>
       </div>
-      <div class="navbar-collapse collapse">
+     <div class="navbar-collapse collapse">
         <div class="menu">
           <ul class="nav nav-tabs" role="tablist">            
-            <li role="presentation" class="active"><a href="index.html">Inicio</a></li>
-            <li role="presentation"><a href="index.html">Lecturas</a></li>
+            <li role="presentation"><a href="index.html">Inicio</a></li>
+            <li role="presentation"><a href="Lecturas.html">Lecturas</a></li>            
+            <li role="presentation" class="activities"><a href="Multimedia.html">Multimedia</a>
+              <ul class="submenu">
+                <li><a href="Multimedia1.html">Multimedia 1</a></li>
+                <li><a href="Multimedia2.html">Multimedia 2</a></li>               
+              </ul>
+            </li>
+            <li role="presentation" class="activities"><a href="Actividades.html">Actividades</a>
+              <ul class="submenu">
+                <li><a href="Actividad1.html">Actividad 1</a></li>
+                <li><a href="Actividad2.html">Actividad 2</a></li>
+                <li><a href="Actividad3.html">Actividad 3</a></li>
+              </ul>
+            </li>
+            <li role="presentation" class="active"><a href="Autores.html">Autores</a></li>
           </ul>
         </div>
       </div>
@@ -106,7 +119,7 @@
       <div class="container">
         <div class="row">
           <div class="copyright">
-            Grupo:
+            Grupo:55
             <div class="credits">
               <!--
                 All the links in the footer should remain intact. 
@@ -114,7 +127,7 @@
                 Licensing information: https://bootstrapmade.com/license/
                 Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eNno
               -->
-              <a href="#">unad</a>
+              <a href="#">UNAD</a>
             </div>
           </div>
         </div>
@@ -122,7 +135,13 @@
       <div class="container">
         <div class="row">
           <ul class="social-network">
-            <li><a href="#" data-placement="top" title="contenido">contenido</a></li>
+            <div class="w3-sidebar w3-bar-block" style="margin-left:80%">  
+            <a class="twitter-timeline" data-width="600" data-height="200" href="https://twitter.com/UniversidadUNAD"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+            <!-- Contador de visitas -->
+          <center><a href="http://www.websmultimedia.com/contador-de-visitas-gratis" title="Contador De Visitas Gratis">
+            <img style="border: 0px solid; display: inline;" alt="contador de visitas" src="http://www.websmultimedia.com/contador-de-visitas.php?id=255020"></a><br></center>
+                      <!-- Fin Contador de visitas -->           
+</div>
         </div>
       </div>
 
