--- a/Multimedia2.html
+++ b/Multimedia2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MULTIMEDIA</title>
+  <title>DOCUMENTACI[ON EN PROYECTOS DE SOFTWARE</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -59,18 +59,19 @@
   </nav>
 <div class="container">
     <div class="row">     
-      <div id="pane" >
-        <br> <br/>         
-          <br> <br/>
-          <img class="center-block" src="img/multimedia.jpg">
-          <center>
-          <table class="center" style="width:60%">           
-            <td><a title="Doocumentación" href="Multimedia1.html"><img src="img/documentacion.jpg" alt="Documentación" /></a></td>   
-            <td><a title="Pruebas" href="Multimedia2.html"><img src="img/pruebas.jpg" alt="pruebas" /></a></td> 
-           </table> 
-            </center>
-      </div>
-              
+      <div id="pane" >      
+          <img class="center-block" src="img/pruebas.jpg">
+        <CENTER>
+        <br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/l78LfThrymY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <br>Hernandez, R [Raydelto Hernandez]. (2017, Mayo 11). 05 - Tipos de Pruebas de Software  [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=l78LfThrymY
+        <br><br><br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/I1Kj6FI9H7g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <br>Aguilar, J [jean carlos salas aguilar]. (2014, Agosto 17). QA / Pruebas Software / Pruebas Automáticas[Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=I1Kj6FI9H7g
+        <br><br><br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/UMMMWaP7ejU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <br>Software Guru [Software Guru]. (2014, Octubre 29). ¿Cómo convertirse en un tester de verdad? [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=UMMMWaP7ejU
+        </CENTER>
     </div>  
   </div>
  </div> 
