--- a/Actividad1.html
+++ b/Actividad1.html
@@ -56,24 +56,12 @@
 	</div>
 	<div style="width: 80%; float: left;">
 	  	<div style="width: 100%;">
-		  	<section class="a">
-		  		<header><h3>Actividad 1</h3></header>
+		  	<section>
+		  		<header><h3>Actividad 1: Emparejar</h3></header>
 		  		<article>
-		  			<a href="actividad1.html"><img src="img/a1.jpg" alt="actividad_1" class="a-img"></a>
-		  		</article>
-		  	</section>
-
-		  	<section class="a">
-		  		<header><h3>Actividad 2</h3></header>
-		  		<article>
-		  			<a href="actividad2.html"><img src="img/a2.jpg" alt="actividad_2" class="a-img"></a>
-		  		</article>
-		  	</section>
-
-		  	<section class="a">
-		  		<header><h3>Actividad 3</h3></header>
-		  		<article>
-		  			<a href="actividad3.html"><img src="img/a3.jpg" alt="actividad_2" class="a-img"></a>
+		  			<p>
+		  				
+		  			</p>
 		  		</article>
 		  	</section>
 		</div>
