--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <li role="presentation"><a href="Multimedia.html">Multimedia</a></li>
             <li role="presentation" class="activities"><a href="Actividades.html">Actividades</a>
               <ul class="submenu">
-                <li><a href="#actividad1">Actividad 1</a></li>
-                <li><a href="#actividad2">Actividad 2</a></li>
-                <li><a href="#actividad3">Actividad 3</a></li>
+                <li><a href="actividad1.html">Actividad 1</a></li>
+                <li><a href="actividad2.html">Actividad 2</a></li>
+                <li><a href="actividad3.html">Actividad 3</a></li>
               </ul>
             </li>
             <li role="presentation"><a href="Autores.html">Autores</a></li>
@@ -101,7 +101,7 @@
             </div>
             <p>Contenido</p>
             <div class="ficon">
-              <a href="#" class="btn btn-default" role="button">Cntinuar...</a>
+              <a href="#" class="btn btn-default" role="button">Continuar...</a>
             </div>
           </div>
         </div>
