--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <li role="presentation" class="activities"><a href="Actividades.html">Actividades</a>
               <ul class="submenu">
 
-                <li><a href="actividad1.html">Actividad 1</a></li>
-                <li><a href="actividad2.html">Actividad 2</a></li>
-                <li><a href="actividad3.html">Actividad 3</a></li>
+                <li><a href="Actividad1.html">Actividad 1</a></li>
+                <li><a href="Actividad2.html">Actividad 2</a></li>
+                <li><a href="Actividad3.html">Actividad 3</a></li>
 
               </ul>
             </li>
