--- a/Multimedia2.html
+++ b/Multimedia2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>UNAD</title>
+  <title>DOCUMENTACI[ON EN PROYECTOS DE SOFTWARE</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -57,62 +57,25 @@
       </div>
     </div>
   </nav>
-  <div class="container">
-    <div class="row">
-      <div class="slider">
-        <div class="img-responsive">
-          <ul class="bxslider">
-            <li><img src="img/01.jpg" alt="" /></li>
-            <li><img src="img/01.jpg" alt="" /></li>
-            <li><img src="img/01.jpg" alt="" /></li>
-          </ul>
-        </div>
-      </div>
-    </div>
+<div class="container">
+    <div class="row">     
+      <div id="pane" >      
+          <img class="center-block" src="img/pruebas.jpg">
+        <CENTER>
+        <br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/l78LfThrymY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <br>Hernandez, R [Raydelto Hernandez]. (2017, Mayo 11). 05 - Tipos de Pruebas de Software  [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=l78LfThrymY
+        <br><br><br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/I1Kj6FI9H7g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <br>Aguilar, J [jean carlos salas aguilar]. (2014, Agosto 17). QA / Pruebas Software / Pruebas Automáticas[Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=I1Kj6FI9H7g
+        <br><br><br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/UMMMWaP7ejU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <br>Software Guru [Software Guru]. (2014, Octubre 29). ¿Cómo convertirse en un tester de verdad? [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=UMMMWaP7ejU
+        </CENTER>
+    </div>  
   </div>
-  <!--contenido de sesion-->
-  <div class="container">
-    <div class="row">
-      <div class="box">
-        <div class="col-md-4">
-          <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="0.4s">
-            <h4>Información</h4>
-            <div class="icon">
-              <i class="fa fa-location-arrow fa-3x"></i>
-            </div>
-            <p>Contenido</p>
-            <div class="ficon">
-              <a href="#" class="btn btn-default" role="button">Continuar...</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="1.0s">
-            <h4>Información</h4>
-            <div class="icon">
-              <i class="fa fa-desktop fa-3x"></i>
-            </div>
-            <p>Contenido</p>
-            <div class="ficon">
-              <a href="#" class="btn btn-default" role="button">Continuar...</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="1.6s">
-            <h4>Información</h4>
-            <div class="icon">
-              <i class="fa fa-location-arrow fa-3x"></i>
-            </div>
-            <p>Contenido</p>
-            <div class="ficon">
-              <a href="#" class="btn btn-default" role="button">Continuar...</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+ </div> 
+
 <!--pie de página-->
   <footer>
     <div class="last-div">
