--- a/Actividades.html
+++ b/Actividades.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<head>
-	  <meta charset="utf-8">
-	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <title>Actividades</title>
+<html lang="en">
 
-	  <!-- Bootstrap -->
-	  <link href="css/bootstrap.min.css" rel="stylesheet">
-	  <link rel="stylesheet" href="css/animate.css">
-	  <link rel="stylesheet" href="css/font-awesome.min.css">
-	  <link rel="stylesheet" href="css/jquery.bxslider.css">
-	  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-	  <link rel="stylesheet" type="text/css" href="css/demo.css" />
-	  <link rel="stylesheet" type="text/css" href="css/set1.css" />
-	  <link href="css/overwrite.css" rel="stylesheet">
-	  <link href="css/style.css" rel="stylesheet">
-	  <link rel="stylesheet" type="text/css" href="css/actividades.css">
-	</head>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>ACTIVIDADES</title>
+
+  <!-- Bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/jquery.bxslider.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+  <link rel="stylesheet" type="text/css" href="css/demo.css" />
+  <link rel="stylesheet" type="text/css" href="css/set1.css" />
+  <link href="css/overwrite.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/actividades.css">
+</head>
+
 <body>
+
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	    <div class="container">
 	      <!-- Brand and toggle get grouped for better mobile display -->
@@ -40,9 +42,9 @@
 	            <li role="presentation"><a href="Multimedia.html">Multimedia</a></li>
 	            <li role="presentation" class="active activities"><a href="Actividades.html">Actividades</a>
 	            	<ul class="submenu">
-	            		<li><a href="actividad1.html">Actividad 1</a></li>
-	            		<li><a href="actividad2.html">Actividad 2</a></li>
-	            		<li><a href="actividad3.html">Actividad 3</a></li>
+	            		<li><a href="Actividad1.html">Actividad 1</a></li>
+	            		<li><a href="Actividad2.html">Actividad 2</a></li>
+	            		<li><a href="Actividad3.html">Actividad 3</a></li>
 	            	</ul>
 	            </li>
 	            <li role="presentation"><a href="Autores.html">Autores</a></li>           
@@ -59,21 +61,21 @@
 		  	<section class="a">
 		  		<header><h3>Actividad 1</h3></header>
 		  		<article>
-		  			<a href="actividad1.html"><img src="img/a1.jpg" alt="actividad_1" class="a-img"></a>
+		  			<a href="Actividad1.html"><img src="img/a1.jpg" alt="actividad_1" class="a-img"></a>
 		  		</article>
 		  	</section>
 
 		  	<section class="a">
 		  		<header><h3>Actividad 2</h3></header>
 		  		<article>
-		  			<a href="actividad2.html"><img src="img/a2.jpg" alt="actividad_2" class="a-img"></a>
+		  			<a href="Actividad2.html"><img src="img/a2.jpg" alt="actividad_2" class="a-img"></a>
 		  		</article>
 		  	</section>
 
 		  	<section class="a">
 		  		<header><h3>Actividad 3</h3></header>
 		  		<article>
-		  			<a href="actividad3.html"><img src="img/a3.jpg" alt="actividad_2" class="a-img"></a>
+		  			<a href="Actividad3.html"><img src="img/a3.jpg" alt="actividad_2" class="a-img"></a>
 		  		</article>
 		  	</section>
 		</div>
@@ -92,5 +94,6 @@
 		  	</section>
 	  	</div>
 	</div>
+
 </body>
 </html>
