--- a/Multimedia1.html
+++ b/Multimedia1.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>UNAD</title>
+  <title>DOCUMENTACI[ON EN PROYECTOS DE SOFTWARE</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -57,62 +57,25 @@
       </div>
     </div>
   </nav>
-  <div class="container">
-    <div class="row">
-      <div class="slider">
-        <div class="img-responsive">
-          <ul class="bxslider">
-            <li><img src="img/01.jpg" alt="" /></li>
-            <li><img src="img/01.jpg" alt="" /></li>
-            <li><img src="img/01.jpg" alt="" /></li>
-          </ul>
-        </div>
-      </div>
-    </div>
+<div class="container">
+    <div class="row">     
+      <div id="pane" >      
+          <img class="center-block" src="img/documentacion.jpg">
+        <CENTER>
+        <br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/pII2WpxJQg4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <br>Alcenit Corporation [Alcenit Corporation]. (2015, Mayo 14). Pruebas de Software (Testing de Software)  [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=pII2WpxJQg4
+        <br><br><br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qkeD94Kj_UQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <br>DesarrolloWeb.com [DesarrolloWeb.com]. (2017, Mayo 25). Desarrollo de pruebas del software [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=qkeD94Kj_UQ
+        <br><br><br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Gh1x1kMQ5K4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <br>Palma, A. [Andy Castillo Palma]. (2017, Agosto 17). Documentación XP - Plan de pruebas [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=Gh1x1kMQ5K4
+        </CENTER>
+    </div>  
   </div>
-  <!--contenido de sesion-->
-  <div class="container">
-    <div class="row">
-      <div class="box">
-        <div class="col-md-4">
-          <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="0.4s">
-            <h4>Información</h4>
-            <div class="icon">
-              <i class="fa fa-location-arrow fa-3x"></i>
-            </div>
-            <p>Contenido</p>
-            <div class="ficon">
-              <a href="#" class="btn btn-default" role="button">Continuar...</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="1.0s">
-            <h4>Información</h4>
-            <div class="icon">
-              <i class="fa fa-desktop fa-3x"></i>
-            </div>
-            <p>Contenido</p>
-            <div class="ficon">
-              <a href="#" class="btn btn-default" role="button">Continuar...</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="1.6s">
-            <h4>Información</h4>
-            <div class="icon">
-              <i class="fa fa-location-arrow fa-3x"></i>
-            </div>
-            <p>Contenido</p>
-            <div class="ficon">
-              <a href="#" class="btn btn-default" role="button">Continuar...</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+ </div> 
+
 <!--pie de página-->
   <footer>
     <div class="last-div">
