--- a/Lecturas.html
+++ b/Lecturas.html
@@ -18,6 +18,7 @@
   <link href="css/overwrite.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/actividades.css">
+  <link rel="stylesheet" type="text/css" href="css/lecturas.css">
 </head>
 
 <body>
@@ -58,10 +59,6 @@
     </div>
   </nav>
 <br>
-  <br>
-  <br>
-  <br>
-  <br>
   <div class="body">
     <div class="subtitle">
       <h2 align="center"><b>Documentacion De Pruebas De Software</b></h2>
