se actualizo autores.html y lecturas.html html
copia del desarrollo de la actividad de la unad con los html organizados

--- a/Lecturas.html
+++ b/Lecturas.html
@@ -59,10 +59,11 @@
     </div>
   </nav>
 <br>
-  <div class="body">
+	<div class="background">
+  		<div class="body">
     <div class="subtitle">
       <h2 align="center"><b>Documentacion De Pruebas De Software</b></h2>
-    </div>
+      </div>
     <br>
     <br>
     <section>
@@ -109,7 +110,10 @@
           <br>
         </div>
       </section>
-  </div>      
+  </div> 
+  </div>
+
+
 <!--pie de página-->
   <footer>
     <div class="last-div">
