--- a/Actividades.html
+++ b/Actividades.html
@@ -18,6 +18,7 @@
   <link href="css/overwrite.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/actividades.css">
+  <link rel="stylesheet" type="text/css" href="css/lecturas.css">
 </head>
 
 <body>
@@ -35,13 +36,13 @@
       </div>
      <div class="navbar-collapse collapse">
         <div class="menu">
-          <ul class="nav nav-tabs" role="tablist">            
+          <ul class="nav nav-tabs" role="tablist">
             <li role="presentation"><a href="index.html">Inicio</a></li>
-            <li role="presentation"><a href="Lecturas.html">Lecturas</a></li>            
+            <li role="presentation"><a href="Lecturas.html">Lecturas</a></li>
             <li role="presentation" class="activities"><a href="Multimedia.html">Multimedia</a>
               <ul class="submenu">
                 <li><a href="Multimedia1.html">Multimedia 1</a></li>
-                <li><a href="Multimedia2.html">Multimedia 2</a></li>               
+                <li><a href="Multimedia2.html">Multimedia 2</a></li>
               </ul>
             </li>
             <li role="presentation" class="activities"><a href="Actividades.html">Actividades</a>
@@ -51,7 +52,7 @@
                 <li><a href="Actividad3.html">Actividad 3</a></li>
               </ul>
             </li>
-    <li role="presentation"><a href="Autores.html">Autores</a></li>           
+    <li role="presentation"><a href="Autores.html">Autores</a></li>
             </ul>
           </div>
         </div>
@@ -63,7 +64,7 @@
         <header><h3>Actividad 1</h3></header>
         <article>
           <img src="img/a1.jpg" alt="actividad_1" class="a-img">
-          <p>Descripción...</p> 
+          <p>Descripción...</p>
         </article>
       </section>
 
@@ -71,7 +72,7 @@
         <header><h3>Actividad 2</h3></header>
         <article>
           <img src="img/a1.jpg" alt="actividad_2" class="a-img">
-          <p>Descripción...</p> 
+          <p>Descripción...</p>
         </article>
       </section>
 
@@ -79,10 +80,10 @@
         <header><h3>Actividad 3</h3></header>
         <article>
           <img src="img/a1.jpg" alt="actividad_3" class="a-img">
-          <p>Descripción...</p> 
+          <p>Descripción...</p>
         </article>
       </section>
   </div>
-  
+
 </body>
 </html>
