--- a/Multimedia2.html
+++ b/Multimedia2.html
@@ -9,16 +9,17 @@
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/animate.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/jquery.bxslider.css">
-  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-  <link rel="stylesheet" type="text/css" href="css/demo.css" />
-  <link rel="stylesheet" type="text/css" href="css/set1.css" />
-  <link href="css/overwrite.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/actividades.css">
-</head>
+   <link rel="stylesheet" href="css/animate.css">
+   <link rel="stylesheet" href="css/font-awesome.min.css">
+   <link rel="stylesheet" href="css/jquery.bxslider.css">
+   <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+   <link rel="stylesheet" type="text/css" href="css/demo.css" />
+   <link rel="stylesheet" type="text/css" href="css/set1.css" />
+   <link href="css/overwrite.css" rel="stylesheet">
+   <link href="css/style.css" rel="stylesheet">
+   <link rel="stylesheet" type="text/css" href="css/actividades.css">
+   <link rel="stylesheet" type="text/css" href="css/lecturas.css">
+ </head>
 
 <body>
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -35,13 +36,13 @@
       </div>
      <div class="navbar-collapse collapse">
         <div class="menu">
-          <ul class="nav nav-tabs" role="tablist">            
+          <ul class="nav nav-tabs" role="tablist">
             <li role="presentation"><a href="index.html">Inicio</a></li>
-            <li role="presentation"><a href="Lecturas.html">Lecturas</a></li>            
+            <li role="presentation"><a href="Lecturas.html">Lecturas</a></li>
             <li role="presentation" class="activities"><a href="Multimedia.html">Multimedia</a>
               <ul class="submenu">
                 <li><a href="Multimedia1.html">Multimedia 1</a></li>
-                <li><a href="Multimedia2.html">Multimedia 2</a></li>               
+                <li><a href="Multimedia2.html">Multimedia 2</a></li>
               </ul>
             </li>
             <li role="presentation" class="activities"><a href="Actividades.html">Actividades</a>
@@ -58,8 +59,8 @@
     </div>
   </nav>
 <div class="container">
-    <div class="row">     
-      <div id="pane" >      
+    <div class="row">
+      <div id="pane" >
           <img class="center-block" src="img/pruebas.jpg">
         <CENTER>
         <br><br>
@@ -72,9 +73,9 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/UMMMWaP7ejU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <br>Software Guru [Software Guru]. (2014, Octubre 29). ¿Cómo convertirse en un tester de verdad? [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=UMMMWaP7ejU
         </CENTER>
-    </div>  
+    </div>
   </div>
- </div> 
+ </div>
 
 <!--pie de página-->
   <footer>
@@ -85,7 +86,7 @@
             Grupo:55
             <div class="credits">
               <!--
-                All the links in the footer should remain intact. 
+                All the links in the footer should remain intact.
                 You can delete the links only if you purchased the pro version.
                 Licensing information: https://bootstrapmade.com/license/
                 Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eNno
@@ -98,12 +99,12 @@
       <div class="container">
         <div class="row">
           <ul class="social-network">
-            <div class="w3-sidebar w3-bar-block" style="margin-left:80%">  
-            <a class="twitter-timeline" data-width="600" data-height="200" href="https://twitter.com/UniversidadUNAD"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+            <div class="w3-sidebar w3-bar-block" style="margin-left:80%">
+            <a class="twitter-timeline" data-width="600" data-height="200" href="https://twitter.com/UniversidadUNAD"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             <!-- Contador de visitas -->
           <center><a href="http://www.websmultimedia.com/contador-de-visitas-gratis" title="Contador De Visitas Gratis">
             <img style="border: 0px solid; display: inline;" alt="contador de visitas" src="http://www.websmultimedia.com/contador-de-visitas.php?id=255020"></a><br></center>
-                      <!-- Fin Contador de visitas -->           
+                      <!-- Fin Contador de visitas -->
 </div>
         </div>
       </div>
