--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -17,8 +17,6 @@
   <link rel="stylesheet" type="text/css" href="css/set1.css" />
   <link href="css/overwrite.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/actividades.css">
-
 </head>
 
 <body>
@@ -32,13 +30,29 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-        <a class="navbar-brand" href="index.html"><img src="img/logo1.png" style="width:50px;height:20px alt="INDEX" border="0"></a>
+        <a class="navbar-brand" href="index.html"><span><img class="img_logo" src="img/logoUNAD.png" alt="" /></span></a>
       </div>
       <div class="navbar-collapse collapse">
         <div class="menu">
           <ul class="nav nav-tabs" role="tablist">            
             <li role="presentation" class="active"><a href="index.html">Inicio</a></li>
-            <li role="presentation"><a href="index.html">Lecturas</a></li>
+            <li role="presentation"><a href="Lecturas.html">Lecturas</a></li>
+            <li class="dropdown">
+					<a href="Multimedia.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Multimedia<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="Multimedia1.html">Multimedia 1</a></li>
+						<li><a href="Multimedia2.html">Multimedia 2</a></li>
+					</ul>
+			</li>
+            <li class="dropdown">
+					<a href="Actividades.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actividades<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="Actividad1.html">Actividad 1</a></li>
+						<li><a href="Actividad2.html">Actividad 2</a></li>
+						<li><a href="Actividad3.html">Actividad 3</a></li>
+					</ul>
+			</li>
+            <li role="presentation"><a href="Autores.html">Autores</a></li>
           </ul>
         </div>
       </div>
