Contenido del index
Se agrega contenido en la sesión de botones

--- a/index.html
+++ b/index.html
@@ -77,37 +77,37 @@
       <div class="box">
         <div class="col-md-4">
           <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="0.4s">
-            <h4>Información</h4>
+            <h4>Documentación de pruebas</h4>
             <div class="icon">
               <i class="fa fa-location-arrow fa-3x"></i>
             </div>
-            <p>Contenido</p>
+            <p>Siendo los softwares una herramienta que se utilizan en prácticamente en todo el mundo...</p>
             <div class="ficon">
-              <a href="#" class="btn btn-default" role="button">Continuar...</a>
+              <a href="Lecturas.html" class="btn btn-default" role="button">Continuar...</a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="1.0s">
-            <h4>Información</h4>
+            <h4>Galería multimedia</h4>
             <div class="icon">
               <i class="fa fa-desktop fa-3x"></i>
             </div>
-            <p>Contenido</p>
+            <p>La función del técnico en control de calidad es garantizar el buen funcionamiento...</p>
             <div class="ficon">
-              <a href="#" class="btn btn-default" role="button">Continuar...</a>
+              <a href="Multimedia.html" class="btn btn-default" role="button">Continuar...</a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="1.6s">
-            <h4>Información</h4>
+            <h4>Tipo de actividades</h4>
             <div class="icon">
               <i class="fa fa-location-arrow fa-3x"></i>
             </div>
-            <p>Contenido</p>
+            <p>Las pruebas de software (en inglés software testing) son las investigaciones empíricas y técnicas cuyo...</p>
             <div class="ficon">
-              <a href="#" class="btn btn-default" role="button">Cntinuar...</a>
+              <a href="Actividades.html" class="btn btn-default" role="button">Cntinuar...</a>
             </div>
           </div>
         </div>
