--- a/Actividad2.html
+++ b/Actividad2.html
@@ -60,7 +60,7 @@
 		  		<header><h3>Actividad 2: Quiz</h3></header>
 		  		<article>
 		  			<p>
-		  				
+		  				<iframe src='https://es.educaplay.com/es/recursoseducativos/4087746/html5/proof_quiz.htm' width='100%' height='690' frameborder='0'></iframe><br><a href='https://es.educaplay.com/es/recursoseducativos/4087746/proof_quiz.htm'>Capitales de Colombia</a>
 		  			</p>
 		  		</article>
 		  	</section>
